# edge-ai-defect

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  requirements-lock.txt  requirements.txt
configs/export/: yolov8n_neudet_frozen.yaml
configs/model_contracts/: yolov8n_neudet_frozen.yaml
configs/stage_j/: test_inventory.yaml
configs/train/: training_evidence_manifest.json  yolov8n_neudet_640.yaml  yolov8n_neudet_baseline.yaml  yolov8n_neudet_baseline_seed123.yaml  yolov8n_neudet_baseline_seed42_deterministic.yaml  yolov8n_neudet_baseline_seed7.yaml  yolov8n_neudet_smoke.yaml  yolov8n_neudet_v2.yaml  yolov8n_neudet_v3_no_mosaic.yaml  yolov8n_neudet_v4_adamw.yaml  yolov8n_neudet_v5_coslr.yaml  yolov8n_neudet_v6_no_warmup.yaml
docs/: ARCHITECTURE.md  BASELINE_TRAINING.md  CODING_RULES.md  MODEL_FREEZE_RECORD.md  PROJECT_BRIEF.md  REQUIREMENTS.md  TRAINING_ARCHIVE_INDEX.md  TRAINING_FINAL_REPORT.md
docs/personal/: DECISIONS.md  ENVIRONMENT.md  EXPERIMENT_PLAN.md  J2_2_V2_EVIDENCE_RECONCILIATION.md  M1_EXECUTION_PLAN.md  M2_EXECUTION_PLAN.md  M3_EXECUTION_PLAN.md  M4_EXECUTION_PLAN.md  M5_EXECUTION_PLAN.md  STAGE_J_EXECUTION_PLAN.md  STAGE_J_TASK_CARDS.md  TASKS.md
experiments/training/: README.md
experiments/training/yolov8n_neudet_smoke_20260711_160810/: command.txt  end_time.txt  environment.txt  git_commit.txt  start_time.txt  summary.json
experiments/training/yolov8n_neudet_smoke_20260711_173444/: command.txt  config.yaml  end_time.txt  environment.txt  start_time.txt  summary.json
experiments/training/yolov8n_neudet_smoke_smoke_20260711_160521/: command.txt  config.yaml  end_time.txt  environment.txt  start_time.txt  summary.json
include/edge_ai_defect/backend_ort/: onnx_runtime_engine.hpp  onnx_runtime_options.hpp
include/edge_ai_defect/core/: status.hpp  tensor.hpp
include/edge_ai_defect/inference/: inference_engine.hpp
include/edge_ai_defect/model/: model_contract.hpp  model_contract_loader.hpp
include/edge_ai_defect/postprocess/: detection.hpp  postprocess_config.hpp  postprocessor.hpp
include/edge_ai_defect/preprocess/: letterbox.hpp  preprocessor.hpp
include/edge_ai_defect/runtime/: cli.hpp  composite_sink.hpp  console_sink.hpp  directory_source.hpp  frame_trace.hpp  image_source.hpp  json_sink.hpp  opencv_thread_policy.hpp  portable_control.hpp  result_sink.hpp  runtime_config.hpp  runtime_types.hpp  serial_runner.hpp
results/benchmark/ort_cpu/20260719_850252b/: README.txt  aggregate_summary.json  benchmark_protocol.json  (+4 more)
results/onnx_export/: environment_provenance.txt  export_metadata.json  onnxruntime_smoke_test.json  pt_onnx_compare.json
results/training/: training_experiment_summary.csv  training_experiment_summary.json
results/training/evidence/: EXPERIMENT_PROVENANCE.json  README.txt  experiment_effective_args_summary.json  frozen_test_command.txt  frozen_test_environment.txt  frozen_test_metrics.csv  frozen_test_metrics.json  validation_command.txt  validation_metrics_by_experiment.csv  validation_metrics_by_experiment.json
results/validation/onnx_runtime_engine_level_b/: comparison_report.json  cpp_output.f32le  input_manifest.json  provenance.json
results/validation/postprocessor_only/: provenance.json
results/validation/preprocess_level_a/: level_a_report.json  provenance.json
scripts/: convert_neudet_to_yolo.py  export_onnx.py  extract_per_class_metrics.py  generate_evidence_patch.py  run_seed42_deterministic_training.py  train_yolo.py
src/: backend_ort.cpp  cli.cpp  composite_sink.cpp  console_sink.cpp  core.cpp  directory_source.cpp  frame_trace.cpp  json_sink.cpp  letterbox.cpp  main.cpp  model_contract.cpp  onnx_runtime_engine.cpp  onnx_runtime_options.cpp  opencv_thread_policy.cpp  portable_control.cpp  postprocess_config.cpp  postprocess_detail.hpp  postprocessor.cpp  postprocessor_decode.cpp  postprocessor_nms.cpp  postprocessor_transform.cpp  preprocessor.cpp  result_sink.cpp  result_sink_detail.hpp  runtime_config.cpp  serial_runner.cpp
tests/: preprocess_level_a_compare.cpp  preprocess_level_a_compare.hpp  preprocess_level_a_manifest.cpp  preprocess_level_a_manifest.hpp  test_application_smoke.py  test_cli.cpp  test_compare_pt_onnx.py  test_core.cpp  test_directory_source.cpp  test_export_onnx.py  test_generate_evidence_patch.py  test_inference_engine.cpp  test_letterbox.cpp  test_m5_level_c_compare.py  test_m5_level_c_reference.py  test_m5_level_c_runner.py  test_m5_ort_cpu_analyze.py  test_m5_ort_cpu_common.py  test_m5_ort_cpu_runner.py  test_model_contract.cpp  test_onnx_runtime_engine_initialization.cpp  test_onnx_runtime_engine_level_b.cpp  test_onnx_runtime_engine_run.cpp  test_onnxruntime_smoke_test.py  test_postprocessor_contract.cpp  test_postprocessor_decode.cpp  test_postprocessor_nms.cpp  test_postprocessor_process.cpp  test_postprocessor_reference.cpp  test_prepare_m5_corpus.py  test_preprocess_level_a.cpp  test_preprocess_level_a_compare.cpp  test_preprocess_level_a_manifest.cpp  test_preprocessor.cpp  test_result_sinks.cpp  test_runtime_config.cpp  test_runtime_types.cpp  test_serial_runner.cpp  test_train_yolo.py
tests/cmake/: verify_postprocessor_reference_malformed.cmake  verify_preprocess_level_a_provenance.cmake  verify_preprocess_level_a_sha256.cmake
tests/data/postprocessor_reference/: README.txt
tests/data/preprocess_level_a/: README.md  SHA256SUMS  manifest.yaml
tests/smoke/: ort_inference_smoke.cpp  ort_model_contract_smoke.cpp  ort_runtime_smoke.cpp  ort_smoke_test_support.cpp  ort_smoke_test_support.hpp
tools/benchmark/: m5_ort_cpu_analyze.py  m5_ort_cpu_common.py  run_m5_ort_cpu_baseline.py
tools/validation/: compare_pt_onnx.py  generate_onnx_runtime_engine_level_b_golden.py  generate_onnx_runtime_engine_level_b_provenance.py  generate_postprocessor_reference_assets.py  generate_postprocessor_reference_provenance.py  generate_preprocess_level_a.py  generate_preprocess_level_a_provenance.py  m5_level_c_common.py  m5_level_c_compare.py  m5_level_c_reference.py  onnxruntime_smoke_test.py  postprocessor_reference.py  prepare_m5_corpus.py  run_m5_level_c.py
(+167 files in other folders)
